# FaceDemo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
clm/: CLM.cc  CLM.h  CMakeLists.txt  FCheck.cc  FCheck.h  FDet.cc  FDet.h  IO.cc  PAW.cc  PAW.h  PDM.cc  PDM.h  Patch.cc  Patch.h  Tracker.cc  Tracker.h  liscence.txt
model/: 3d.txt  Z.img
src/: .fuse_hidden000011c50000000e  .fuse_hidden0000204400000010  .fuse_hidden0000204c00000011  .fuse_hidden000020e100000013  CLMTrackingModule.cpp  CLMTrackingModule.h  CMakeLists.txt  FaceDemo.cpp  FaceDemo.h  RecordModule.cpp  RecordModule.h  WarpUtils.cpp  WarpUtils.h  WarpingModule.cpp  WarpingModule.h  common.h  log.hpp  main.cpp
